    - Date 2021-02-16
    - Adapted to python 3.9.
    - Added a way to force a certain GenTL search path (used for frame grabber
      development).
    - Avoided the dependency on vcruntime140_1.dll when building with Visual
      Studio 2019.
    - Added macOS CI builds.
    - Migrated from travis to gh-actions for linux and macOS.
    - Added pypi deployments for linux and macOS

Version 1.6.0
    - Date 2020-08-20
    - Fixed issues with callbacks due to intptr_t truncation on linux
    - Fixed unittests that failed in python 3.8
    - Updated to current pylon version for windows and linux
    - Enabled unittests in CI-builds
    - Fixed aarch64 binary wheel releases on github

Version 1.5.4
    - Date 2020-04-16
    - Fix interaction with ipython jedi autocompleter
    - Dropped python 3.3 binary releases
    - Added python 3.8 binary releases
    - Use swig 4.0 for linux binary releases

Version 1.5.3
    - Date 2020-03-23
    - Use pylon 6.1.0.19674 to build for Windows
    - Added support for pixel format Mono16 in GetArray()

Version 1.5.2
    - Date 2020-03-03
    - Use pylon 6.1.0.10500 to build for Windows
    - Implement support for decompression of Basler Compression Beyond
      payload.
    - Add several properties to PylonImage
    - Fix a bug in GenICam file access

Version 1.5.1
    - Date 2019-11-12
    - Fixed travis and appveyor builds for windows and linux
    - Added preliminary pylon 6 support for linux
    - Dropped python 2.7 support
    - Fixed GetBuffer in PylonImage

Version 1.5.0
    - Date 2019-09-18
    - Fixed read part of GenICam file access (FileProtocolAdapter.i)
    - Fixed a bug where Pythons memory allocation was used without holding the GIL
    - Amended readme.md
    - Use SWIG 4.0.0 and removed SWIGs legacy handling for boolean parameters.
      This means that APIs that expect a boolean parameter and had accepted
      any Python type in the past (since any Python type can be fed into